# s_interpreter

./: .gitignore  README.md  compiler.py  interpreter.py  pyproject.toml  requirements.txt  s_compiler.py  s_interpreter.py  setup.py
.circleci/: config.yml
src/: __init__.py  interpreter.py
src/s_interpreter/: __init__.py  compiler.py  interpreter.py
tests/: conftest.py
tests/test_compiler/: conftest.py  test_encode.py  test_instruction.py  test_label.py  test_program.py  test_sentence.py  test_sugar.py  test_variable.py
tests/test_compiler/test_encode_decode/: test_encode.py
tests/test_interpreter/: interpreter_program.txt  s_interpreter.slang  test_interpreter.py
