[build-system]
requires = [
    'flit_core>=3.2,<4',
    "sympy>=1.11.1",
    "mpmath>=1.2.1"
]
build-backend = 'flit_core.buildapi'

[project]
name = "s_interpreter"
dynamic = ['version']
authors = [
  { name="Muli Silman", email="mulisilman@gmail.com" },
]
description = "A package for compiling and interpreting S Language code"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SamuelSill/s_interpreter"
"Bug Tracker" = "https://github.com/SamuelSill/s_interpreter/issues"